--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -893,10 +893,10 @@ mark{
     label {
         font-size: 13px;
     }
-    input[type="text" i]{
+    input[type="text"]{
         width: 60%;
     }
-    input[type="email" i]{
+    input[type="email"]{
         width: 60%;
     }
     button{
